# imarisha_scan

./: .dockerignore  Dockerfile  Extraction.ipynb  OFFLINE_REVIEW.md  README.md  REVIEW_UI.md  ROADMAP.md  pyproject.toml
scripts/: package_offline.ps1  package_offline.sh  package_offline_macos.sh  package_offline_macos_pkg.sh
src/imarisha_scan/: __init__.py  main.py
src/imarisha_scan/core/: __init__.py  models.py
src/imarisha_scan/export/: csv_exporter.py
src/imarisha_scan/extract/: __init__.py  answer_sheet.py  rule_engine.py
src/imarisha_scan/ingest/: __init__.py  pipeline.py  upload.py
src/imarisha_scan/installer/: README.md
src/imarisha_scan/ocr/: __init__.py  base.py  tesseract.py  workflow.py
src/imarisha_scan/omr/: __init__.py  detector.py
src/imarisha_scan/preprocess/: __init__.py  pipeline.py
src/imarisha_scan/qr/: __init__.py  decoder.py
src/imarisha_scan/queueing/: __init__.py  sqlite_queue.py
src/imarisha_scan/scanner/: __init__.py  adapters.py
src/imarisha_scan/ui/: __init__.py  review.py
src/imarisha_scan/workflow/: __init__.py  final_results.py  multipage.py
tests/: test_answer_sheet_extractor.py  test_ingest.py  test_local_storage_ingest.py  test_main_upload_path.py  test_multipage_context_processor.py  test_ocr.py  test_ocr_workflow.py  test_omr_detector.py  test_pipeline_components.py  test_preprocess.py  test_qr_decoder.py  test_review_session.py  test_smoke.py
tests/fixtures/ocr/: sample_input.txt
