[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imarisha-scan"
version = "0.1.0"
description = "Scanner/image/pdf to CSV desktop workflow scaffold"
readme = "ROADMAP.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3.0",
  "opencv-python-headless>=4.9,<5.0",
  "pandas>=2.2,<3.0",
  "pillow>=10.0,<12.0",
  "pymupdf>=1.24,<2.0",
  "pytesseract>=0.3.10,<0.4",
]

[project.optional-dependencies]
ui = [
  "flet>=0.84.0,<1.0",
  "flet-desktop==0.84.0",
  "pydantic>=2.7,<3.0",
  "certifi>=2024.0.0",
]
dev = [
  "pytest>=8.0,<9.0",
]
packaging = [
  "pyinstaller>=6.16.0,<7.0",
]
qr = [
  "zxing-cpp>=2.3.0,<3.0",
  "pyzxing>=1.1.1,<2.0",
]

[project.scripts]
imarisha-scan = "imarisha_scan.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
